# pyriksdagen

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: bump-release.py  prerelease.yml  push.yml  release.yml  validate-cff.yml
docs/: pyriksdagen.html  search.js
docs/pyriksdagen/: args.html  dataset.html  date_handling.html  db.html  download.html  export.html  io.html  match_mp.html  metadata.html  motions.html  mp.html  reference_handling.html  refine.html  segmentation.html  swerik_catalog.html  utils.html  wikidata.html
docs/pyriksdagen/motions/: curate.html
examples/: corpus-walkthrough.ipynb
pyriksdagen/: args.py  date_handling.py  db.py  export.py  io.py  match_mp.py  metadata.py  reference-handling.py  reference_handling.py  refine.py  segmentation.py  swerik_catalog.py  utils.py  wikidata.py
pyriksdagen/data/queries/: alias.rq  explicit_no_party.rq  external_identifiers.rq  meeting.rq  member_of_parliament.rq  minister.rq  name_location_specifier.rq  party_affiliation.rq  person.rq  place_of_birth.rq  place_of_death.rq  portraits.rq  speaker.rq  twitter.rq  wiki_id.rq
pyriksdagen/motions/: curate.py
