[tool.poetry]
name = "pyriksdagen"
version = "v1.10.0"
description = "Access the Riksdagen corpus"
authors = ["ninpnin <vainoyrjanainen@icloud.com>"]
repository = "https://github.com/welfare-state-analytics/riksdagen-corpus"
readme = "README.md"
license = "MIT"
packages = [
    { include = "pyriksdagen", from = "" }
]

[tool.poetry.dependencies]
python = "^3.7"
pyparlaclarin = "*"
pandas = "*"
base58 = "*"
kblab-client = "*"
progressbar2 = "*"
lxml = "*"
xmlschema = "*"
unidecode = "*"
dateparser = "*"
beautifulsoup4 = "*"
requests = "*"
numpy = "*"
SPARQLWrapper = "*"
tqdm = "*"
matplotlib = "*"
importlib_resources = "*"
nltk = "*"
textdistance = "*"
py-markdown-table = "*"
alto-xml = "*"
trainerlog = "*"

# Define a torch group so that you don't need to install
# it if you don't want to
[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
transformers = "*"

[tool.poetry.dev-dependencies]
devtools = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
